fixes: tried fixing large scrollbar on windows

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,16 +13,15 @@
     height: 90vh !important;
     position: fixed;
 }
-/*  */
-/* #layout::-webkit-scrollbar { */
-    /* width: 10px!important; */
-/* } */
-/*  */
-/* #layout::-webkit-scrollbar-track{ */
-    /* background-color: red!important; */
-/* } */
-/*  */
-/* #layout::-webkit-scrollbar-thumb{ */
-    /* background-color: green!important; */
-    /* border-radius: 10px!important; */
-/* } */
+body::-webkit-scrollbar {
+    width: 1em!important;
+}
+
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3)!important;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: darkgrey!important;
+    outline: 1px solid slategrey!important;
+}
